# xxtelebot

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  a.out  annotated.html  api_8h_source.html  appveyor.yml  bot.cpp  bot_8h_source.html  classes.html  classtgbot_1_1Bot-members.html  classtgbot_1_1Bot.html  classtgbot_1_1Logger-members.html  classtgbot_1_1Logger.html  classtgbot_1_1LongPollBot-members.html  classtgbot_1_1LongPollBot.html  classtgbot_1_1RegisterCallback-members.html  classtgbot_1_1RegisterCallback.html  classtgbot_1_1TelegramException-members.html  classtgbot_1_1TelegramException.html  classtgbot_1_1WebhookBot-members.html  classtgbot_1_1WebhookBot.html  classtgbot_1_1methods_1_1Api-members.html  classtgbot_1_1methods_1_1Api.html  cmake_install.cmake  dir_25b26b9fa3b0bd1537052b03f43dd617.html  dir_341062dabe40f9ae1e343253940ec771.html  dir_bccb7d533d31c437f72a25c9fa42e2f7.html  dir_d44c64559bbebec7f509842c48db8b23.html  encode_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  get__filename_8h_source.html  (+190 more)
data/: bot.service.template  xxtelebot.pc
examples/: chatInfo.cpp  commands.cpp  deleteMessage.cpp  inline.cpp  kickuser.cpp  pin.cpp  profilephotos.cpp  sendaudio.cpp  sendphoto.cpp  sendvideo.cpp  setchatphoto.cpp
include/tgbot/: bot.h  emoji.h  logger.h  matrix.h  register_callback.h  types.h  version.h  version.h.in
include/tgbot/methods/: api.h  types.h
include/tgbot/utils/: encode.h  get_filename.h  https.h  make_ptr.h  matrix.h  str_match.h  time.h
scripts/: jsoncpp.sh
search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+11 more)
src/: CMakeLists.txt  Makefile  api.cpp  api_types.cpp  bot.cpp  cmake_install.cmake  emoji.cpp  encode.cpp  https.cpp  logger.cpp  main.cpp  matrix.cpp  register_callback.cpp  time.cpp  types.cpp
test/: api_types.cpp  facility.h  matrix.cpp  types.cpp
